fix: make call-us style higher contrast, more readable and consistent

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,8 +120,8 @@ main {
 
 #call-us-box {
     position: absolute;
-    color: black;
-    background-color: #ffffff99;
+    color: white;
+    background-color: #00000099;
     bottom: 28%;
     text-align: center;
     width: 100%;
@@ -147,7 +147,7 @@ main {
 }
 
 #call-us:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 /* Explainer section */
